@@ -1,6 +1,9 @@
 			SWI-Prolog ChangeLog
 			====================
 
+  * ADDED: Perform goal-expansion on 2nd argument of findall/3, bagof/3
+    and setof/3.
+
 VERSION 5.1.6 (Jan 17, 2003)
 ============================
 
